<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Magiq</string>
	<string name="title_normal">Magiq</string>
	<string name="title_training">Magiq training mode</string>
	<string name="title_results">Magiq search results</string>
	<string name="title_settings">Magiq settings</string>
	<string name="title_about">Magiq</string>
	
	<string name="menu_options">Opt</string>
	<string name="menu_mode_normal">Normal mode</string>
	<string name="menu_mode_training">Training mode</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	
	<string name="label_begin">Press Capture to begin</string>
	<string name="label_distance">Distance (m):</string>
	<string name="label_latitude">Latitude:</string>
	<string name="label_longitude">Longitude:</string>
	<string name="label_description">Description:</string>
	
	<string name="hint_description">&lt;Enter description&gt;</string>
	<string name="button_more">More</string>
	<string name="button_capture">Capture</string>
	<string name="button_save">Save</string>
	<string name="button_submit">Submit</string>
	<string name="button_submit_number">Submit (%1$d)</string>
	
	<string name="dialog_yes">Yes</string>
	<string name="dialog_no">No</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_cancel">Cancel</string>
	
	<string name="info_cancelled_by_user">Cancelled by user</string>
	<string name="info_task_completed">Task completed</string>
	<string name="info_data_saved">Data saved</string>
	<string name="info_waiting_location_data">Waiting for GPS data&#8230;</string>
	<string name="info_compressing_image">Compressing image&#8230;</string>
	<string name="info_sending_data">Sending data&#8230;</string>
	<string name="info_waiting_results">Waiting for results&#8230;</string>
	<string name="prompt_location_settings">%1$s needs to turn on the GPS. Proceed?</string>
	<string name="prompt_connection_settings">%1$s needs to connect to the internet. Proceed?</string>
	
	<string name="error_distance_integer">Distance must be integer number</string>
	<string name="error_connection_failed">%1$s cannot connect to the internet</string>
	<string name="error_data_transfer_failed">Could not send data. Try again later.</string>
	<string name="error_image_compression_failed">Could not compress image.</string>
	<string name="error_something_went_wrong">Something went wrong</string>
	
	<string name="setting_max_tests">Max image tests:</string>		
	<string name="setting_compare_method">Compare method:</string>
	<string name="setting_reduce_factor">Reduce factor:</string>
	<string name="setting_threshold">Accept result %1$s:</string>

		<string name="setting_host">Host:</string>
	<string name="setting_connection_timeout">Connection timeout (sec):</string>
	<string name="setting_enable_logging">Enable logging:</string>
	<string name="setting_image_compression">Image compression:</string>
	<string name="setting_image_quality">Image quality (%):</string>
	
	<string name="default_notext"></string>
	<string name="default_distance">100</string>
	<string name="default_coord">0.000000</string>
	<string name="default_host">83.212.111.60</string>
	<string name="default_threshold">0</string>

	<integer name="default_max_tests">20</integer>		
	<integer name="default_compare_method">0</integer>
	<integer name="default_reduce_factor">8</integer>
	<integer name="default_connection_timeout">30</integer>
	<integer name="default_image_quality">60</integer>
	
	<bool name="default_image_compression">false</bool>
	<bool name="default_enable_logging">false</bool>
</resources>